bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q1 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(first_value(product) ORDER BY [ENC_SORT(ENC_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST]@2) as product, ENC_PT(first_value(label) ORDER BY [ENC_SORT(ENC_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST]@3) as label]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(ENC_PT(label))@0 ASC, product@1 ASC], preserve_partitioning=[false], sort_prefix=[ENC_SORT(ENC_PT(label))@0 ASC]
    AggregateExec: mode=Single, gby=[__common_expr_1@0 as ENC_SORT(ENC_PT(label)), product@1 as product], aggr=[first_value(product) ORDER BY [ENC_SORT(ENC_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST], first_value(label) ORDER BY [ENC_SORT(ENC_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST]], ordering_mode=PartiallySorted([0])
      ProjectionExec: expr=[ENC_SORT(ENC_PT(label@1)) as __common_expr_1, product@0 as product, label@1 as label]
        SortExec: expr=[ENC_SORT(ENC_PT(label@1)) ASC], preserve_partitioning=[false]
          CoalesceBatchesExec: target_batch_size=8192
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
              CoalesceBatchesExec: target_batch_size=8192
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                  CoalesceBatchesExec: target_batch_size=8192
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                      CoalesceBatchesExec: target_batch_size=8192
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                          MemQuadPatternExec: [GPOS] subject=?product, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?label
                          MemQuadPatternExec: [GPOS] subject=?product, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType66>
                      MemQuadPatternExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature3>
                  MemQuadPatternExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1967>
              CoalesceBatchesExec: target_batch_size=8192
                FilterExec: EBV(GT(ENC_TV(value1@1), 9:136)), projection=[product@0]
                  MemQuadPatternExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>, object=?value1
