bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q1.snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: explanation.initial_logical_plan
---
Projection: ENV_PT(product) AS product, ENV_PT(label) AS label
  Limit: skip=0, fetch=10
    DistinctOn: on_expr=[[ENV_SORT(ENV_PT(label)), product]], select_expr=[[product, label]], sort_expr=[[ENV_SORT(ENV_PT(label)) ASC NULLS FIRST, product ASC NULLS FIRST]]
      Projection: product, label
        Sort: ENV_SORT(ENV_PT(label)) ASC NULLS FIRST
          Filter: EBV(GT(ENC_TV(value1), ENC_TV(Struct({term_type:2,value:136,data_type:http://www.w3.org/2001/XMLSchema#integer,language_tag:}))))
            SparqlJoin: Inner 
              SparqlJoin: Inner 
                SparqlJoin: Inner 
                  SparqlJoin: Inner 
                    QuadPattern (?product <http://www.w3.org/2000/01/rdf-schema#label> ?label), active_graph: Union of [DefaultGraph] 
                    QuadPattern (?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType117>), active_graph: Union of [DefaultGraph] 
                  QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature527>), active_graph: Union of [DefaultGraph] 
                QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature37>), active_graph: Union of [DefaultGraph] 
              QuadPattern (?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?value1), active_graph: Union of [DefaultGraph]
