bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q11 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: canonicalize_uuids(&string)
---
ProjectionExec: expr=[ENC_PT(property@0) as property, ENC_PT(hasValue@1) as hasValue, ENC_PT(isValueOf@2) as isValueOf]
  UnionExec
    ProjectionExec: expr=[property@0 as property, hasValue@1 as hasValue, NULL as isValueOf]
      DataSourceExec: [GSPO] subject=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>, predicate=?property, object=?hasValue
    ProjectionExec: expr=[property@1 as property, NULL as hasValue, isValueOf@0 as isValueOf]
      DataSourceExec: [GOSP] subject=?isValueOf, predicate=?property, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250>
